...

data class SubjectItem(val id: Int, val name: String)
data class TopicItem(val id: Int, val subjectId: Int, val grade: Int, val name: String)

val SUBJECT_LIST = listOf(
    SubjectItem(1, "Limba și literatura română"),
    SubjectItem(2, "Matematică"),
    SubjectItem(3, "Biologie"),
    SubjectItem(4, "Geografie"),
    SubjectItem(5, "Fizică"),
    SubjectItem(6, "Chimie"),
    SubjectItem(7, "Istorie"),
    SubjectItem(8, "TIC"),
    SubjectItem(9, "Informatică"),
    SubjectItem(10, "Logică, argumentare și comunicare"),
    SubjectItem(11, "Filosofie"),
...
